# resplotlib

./: .buildinfo  .gitignore  LICENSE  README.md  TODO.md  api_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  resplotlib.html  search.html  searchindex.js  usage_examples.html
.doctrees/: api_reference.doctree  index.doctree  installation.doctree  resplotlib.doctree  usage_examples.doctree
.doctrees/__intersphinx_cache__/: contextily_objects.inv  ipyleaflet_objects.inv
.doctrees/usage_examples/: 02_guidelines.doctree  03_static_plotting.doctree  04_interactive_plotting.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/resplotlib/: basemaps.html  colormaps.html  explore.html  geometries.html  guidelines.html  map.html  rescale.html  resplotclass.html  utils.html  videos.html  wrappers.html
_sources/: resplotlib.rst.txt  usage_examples.rst.txt
_sources/usage_examples/: 01_getting_started.ipynb.txt  03_static_plotting.ipynb.txt
data/: bathymetry.tif  model.nc  points.geojson  polygons.geojson  project_guidelines.json
docs/: build_docs.md
docs/logo/: creating_the_resplotlib_logo.ipynb
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst
notebooks/: test.ipynb
notebooks/usage_examples/: 02_guidelines.ipynb  04_interactive_plotting.ipynb
src/resplotlib/: __init__.py  basemaps.py  colormaps.py  explore.py  geometries.py  guidelines.py  (+6 more)
usage_examples/: 02_guidelines.html  03_static_plotting.html  04_interactive_plotting.html  04_interactive_plotting.ipynb
(+10 files in other folders)
